operator-rustfmt-error.txt
error: prefix `secret` is unknown
   --> /home/runner/work/mobile-proxy/mobile-proxy/services/host-daemon/src/api.rs:191:30
    |
191 |             Some("credential=secret"),
    |                              ^^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
191 |             Some("credential=secret "),
    |                                    +

error: prefix `error` is unknown
   --> /home/runner/work/mobile-proxy/mobile-proxy/services/host-daemon/src/api.rs:193:32
    |
193 |             Some("raw-provider-error"),
    |                                ^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
193 |             Some("raw-provider-error "),
    |                                     +

error: prefix `secret` is unknown
   --> /home/runner/work/mobile-proxy/mobile-proxy/services/host-daemon/src/api.rs:195:49
    |
195 |         assert!(!untrusted.contains("credential=secret"));
    |                                                 ^^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
195 |         assert!(!untrusted.contains("credential=secret "));
    |                                                       +

error: prefix `error` is unknown
   --> /home/runner/work/mobile-proxy/mobile-proxy/services/host-daemon/src/api.rs:197:51
    |
197 |         assert!(!untrusted.contains("raw-provider-error"));
    |                                                   ^^^^^ unknown prefix
    |
    = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
    |
197 |         assert!(!untrusted.contains("raw-provider-error "));
    |                                                        +

error[E0765]: unterminated double quote string
   --> /home/runner/work/mobile-proxy/mobile-proxy/services/host-daemon/src/api.rs:198:65
    |
198 |           assert!(!untrusted.lines().any(|line| line.ends_with(" 1") && line.contains('{')));
    |  _________________________________________________________________^
199 | |     }
200 | | }
    | |__^

Error writing files: failed to resolve mod `api`: cannot parse /home/runner/work/mobile-proxy/mobile-proxy/services/host-daemon/src/api.rs
